#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-cod-ab-global"
requires-python = "~=3.13.0"
dynamic = ["version"]
dependencies = [
    "geopandas",
    "hdx-python-api",
    "hdx-python-country",
    "hdx-python-utilities",
    "httpx[http2]",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "quantulum3[classifier]",
    "shapely",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[tool.taskipy.tasks]
# uv run task app
app = "python -m hdx.scraper.cod_ab_global"
export = "uv sync -q && uv export -o requirements.txt -q --no-dev --no-emit-project --no-hashes && uv export -o requirements-dev.txt -q --no-emit-project --no-hashes"
ruff = "ruff format && ruff check && ruff format"
