#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-cod-ab-global"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "fsspec>=2025.12.0",
    "geopandas",
    "hdx-python-api",
    "hdx-python-country",
    "hdx-python-utilities",
    "httpx[http2]",
    "pandas",
    "psycopg[binary]",
    "pyarrow",
    "python-dotenv",
    "quantulum3[classifier]",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[tool.taskipy.tasks]
# uv run task app
app = "python -m hdx.scraper.cod_ab_global"
export = "uv sync -q && uv export -o requirements.txt -q --no-dev --no-emit-project --no-hashes && uv export -o requirements-dev.txt -q --no-emit-project --no-hashes"
ruff = "ruff format && ruff check && ruff format"
