[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-cod-ab-global"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.12.0",
    "geopandas",
    "hdx-python-api",
    "hdx-python-country",
    "hdx-python-utilities",
    "httpx[http2]",
    "pandas",
    "psycopg[binary]",
    "pyarrow",
    "python-dotenv",
    "quantulum3[classifier]",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "taskipy"]

[tool.hatch]
version.source = "uv-dynamic-versioning"
build.hooks.version.path = "src/hdx/scraper/cod_ab_global/_version.py"
build.targets.wheel.packages = ["src/hdx"]

[tool.pytest.ini_options]
addopts = "--color=yes"
log_cli = true
pythonpath = "src"

[tool.ruff]
exclude = ["_version.py"]
fix = true
lint.select = ["ALL"]
lint.ignore = [
    "COM812",
    "D100",
    "D104",
    "D203",
    "D213",
    "INP001",
    "PD010",
    "S603",
    "S607",
    "S608",
    "TID252",
]

[tool.taskipy.tasks]
# uv run task app
app = "python run.py"
ruff = "ruff format && ruff check && ruff format"
test = "pytest --rootdir=. --junitxml=test-results.xml --cov --no-cov-on-fail --cov-report=lcov --cov-report=term-missing"
